--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&family=Paprika&family=Playfair+Display:wght@400;500;600;700&display=swap");
+
+@import "./common/common";
+@import "./common/variables";
+@import "./navbar/navbar";
