banner section done!

--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,11 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 #navBar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   padding: 30px 0;
-  background-color: rgb(221, 168, 240);
 }
 #navBar .navBar__wrapper {
   display: flex;
@@ -76,4 +79,78 @@ h1, h2, h3, h4, h5, h6, p {
 }
 #navBar .navBar__wrapper .navBar__btn a:hover {
   background-color: #d6a033;
+}
+
+#banner {
+  background-color: #030D11;
+}
+#banner .banner__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  -moz-column-gap: 0;
+       column-gap: 0;
+  row-gap: 0;
+}
+#banner .banner__wrapper .banner__info {
+  padding-bottom: 220px;
+}
+#banner .banner__wrapper .banner__info h1 {
+  width: 367px;
+  color: #363024;
+  font-size: 64px;
+  font-weight: 800;
+  line-height: normal;
+  font-family: "Open Sans", sans-serif;
+  color: #f7d38a;
+  font-family: "Playfair Display", serif;
+  padding-top: 200px;
+  text-transform: uppercase;
+}
+#banner .banner__wrapper .banner__info h2 {
+  width: 678px;
+  color: #363024;
+  font-size: 64px;
+  font-weight: 800;
+  line-height: normal;
+  font-family: "Open Sans", sans-serif;
+  color: #f5f2eb;
+  font-family: "Open Sans", sans-serif;
+  padding: 16px 0 20px 0;
+  text-transform: capitalize;
+}
+#banner .banner__wrapper .banner__info p {
+  width: 600px;
+  color: #524d43;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 36px;
+  font-family: "Paprika", cursive;
+  color: #bebbb4;
+  padding-bottom: 56px;
+}
+#banner .banner__wrapper .banner__info a {
+  padding: 14px 28px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  line-height: 200%;
+  border: 1px solid #d6a033;
+  transition: all linear 0.3s;
+}
+#banner .banner__wrapper .banner__info a:hover {
+  background-color: #d6a033;
+}
+#banner .banner__wrapper .banner__img {
+  width: 380px;
+  height: 320px;
+  overflow: hidden;
+  background-color: red;
+}
+#banner .banner__wrapper .banner__img img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=style.css.map */
