--- a/sass/navbar/_navbar.scss
+++ b/sass/navbar/_navbar.scss
@@ -7,8 +7,11 @@
 
 // NavBar Start
 #navBar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   padding: 30px 0;
-  background-color: rgb(221, 168, 240);
   .navBar__wrapper {
     @include flexBox(center, space-between, 0, 0);
     .navBar__logo {
